<resources>
    <string name="app_name">Ttrip</string>
    <string name="content_logo_text1">TT</string>
    <string name="content_logo_text2">r</string>
    <string name="content_logo_text3">!P</string>
    <string name="image_splash_ticket_back">image_splash_ticket_back</string>
    <string name="image_splash_ticket_front">image_splash_ticket_front</string>
    <string name="image_onboarding_banner">image_onboarding_banner</string>
    <string name="content_onboarding_puzzles1">내 취향에 딱 어울리는</string>
    <string name="content_onboarding_puzzles2">여행 메이트</string>
    <string name="content_onboarding_puzzles3">를 찾아주는</string>
    <string name="content_onboarding_task1">계획</string>
    <string name="content_onboarding_task2">적인 여행러부터</string>
    <string name="content_onboarding_task3">즉흥</string>
    <string name="content_onboarding_task4">적인 여행러까지</string>
    <string name="content_onboarding_travel1">국내부터 해외까지</string>
    <string name="content_onboarding_travel2">띱</string>
    <string name="content_onboarding_travel3">과 함께 해요!</string>
    <string name="content_onboarding_skip">Skip</string>
    <string name="image_onboarding_button">image_onboarding_button</string>
    <string name="content_start_login">시작하기</string>
    <string name="content_ask_id">계정이 없으신가요? </string>
    <string name="content_sign_up">가입하기</string>
    <string name="content_menu_board">게시판</string>
    <string name="content_menu_live">실시간</string>
    <string name="content_menu_chat">채팅</string>
    <string name="content_menu_mypage">마이페이지</string>
    <string name="image_back_to_onboarding">image_back_to_onboarding</string>
    <string name="image_title_login">image_title_login</string>
    <string name="image_login_earth">image_login_earth</string>
    <string name="content_login">로그인</string>
    <string name="image_login_line">content_login_line</string>
    <string name="content_text_password">PASSWORD</string>
    <string name="content_hint_password">01012345678</string>
    <string name="content_login_id">PHONE</string>
    <string name="content_login_logo">TTr!p</string>
    <string name="content_sign_up_user">회원가입</string>
    <string name="content_phone_number">휴대폰 번호</string>
    <string name="content_phone_number_check">인증번호</string>
    <string name="content_sign_up_password">비밀번호</string>
    <string name="content_sign_up_check">비밀번호 확인</string>
    <string name="content_sign_up_password_not_valid">비밀번호가 일치하지 않습니다.</string>
    <string name="content_declaration_title1">신고</string>
    <string name="content_declaration_title2">가 접수된 회원입니다.</string>
    <string name="content_declaration_title3">소명하시려면 내용을 작성해주세요.</string>
    <string name="content_declaration_phone">phone</string>
    <string name="content_declaration_content">소명내용</string>
    <string name="content_declaration_submit">확인</string>
    <string name="content_declaration_cancel">취소</string>
    <string name="image_call_state">image_call_state</string>
    <string name="image_info_profile">image_info_profile</string>
    <string name="image_distance">image_distance</string>
    <string name="image_detail_info_match_state">image_detail_info_match_state</string>
    <string name="image_detail_info_call_state">image_detail_info_call_state</string>
    <string name="image_end_matching">image_end_matching</string>
    <string name="image_call_to_matching">image_call_to_matching</string>
    <string name="image_current_location">image_current_location</string>
    <string name="content_request_matching">님과 동행하시겠습니까?</string>
    <string name="content_end_matching">님과 만나셨나요?</string>
    <string name="content_cancel">취소</string>
    <string name="content_confirm">확인</string>
    <string name="content_no">아니오</string>
    <string name="content_yes">네</string>
    <string name="content_live_toggle_off">OFF</string>
    <string name="content_live_toggle_on">ON</string>
    <string name="content_close_live">라이브 실행중에는\n다른 페이지로 이동할 수 없습니다.\n라이브를 종료하시겠습니까?</string>
    <string name="image_add_doodle">image_add_doodle</string>
    <string name="image_doodle_color_black">image_doodle_color_black</string>
    <string name="image_doodle_color_neon_blue">image_doodle_color_neon_blue</string>
    <string name="image_doodle_color_pear">image_doodle_color_pear</string>
    <string name="image_doodle_clear">image_doodle_clear</string>
    <string name="content_start_ar">AR 모드를 시작하시겠습니까?</string>
    <string name="image_chat">image_chat</string>
    <string name="title_chat">채팅</string>
    <string name="image_arrow_left">image_arrow_left</string>
    <string name="image_other_profile">image_other_profile</string>
    <string name="image_chat_matching">image_chat_matching</string>
    <string name="content_matching">매칭</string>
    <string name="content_chat_input_hint">메시지 보내기</string>
    <string name="image_send_message">image_send_message</string>
    <string name="content_exit_chat">채팅방을 나가시겠습니까?</string>
    <string name="similarity_format">%d%%</string>
    <string name="image_profile_background">image_profile_background</string>
    <string name="image_edit_profile_background">image_edit_profile_background</string>
    <string name="image_profile_img">image_profile_img</string>
    <string name="image_edit_profile_img">image_edit_profile_img</string>
    <string name="image_certification_badge">image_certification_badge</string>
    <string name="image_profile_certificate">image_profile_certificate</string>
    <string name="image_edit_profile">image_edit_profile</string>
    <string name="content_get_my_posts">내 게시글 보기</string>
    <string name="content_get_my_badges">뱃지 보기</string>
    <string name="content_test_again">취향 테스트 다시하기</string>
    <string name="content_logout">로그아웃</string>
    <string name="title_my_board">게시글 조회</string>
    <string name="content_logout_dialog">로그아웃하시겠습니까?</string>
    <string name="image_certificate_profile">image_certificate_profile</string>
    <string name="image_back_to_login">image_back_to_login</string>
    <string name="title_user_info">회원 정보 입력</string>
    <string name="content_user_info_next">다음</string>
    <string name="content_user_info_nick_name">닉네임을\n입력해주세요</string>
    <string name="content_user_info_nick_name_hint">6자 이내로 입력해주세요</string>
    <string name="content_user_info_nick_name_check">중복체크</string>
    <string name="content_user_info_age">나이를\n입력해주세요</string>
    <string name="content_user_info_sex">성별을\n선택해주세요</string>
    <string name="content_user_info_sex_girl">여자</string>
    <string name="content_user_info_sex_boy">남자</string>
    <string name="content_user_info_profile">프로필 사진과\n소개말을 등록해주세요</string>
    <string name="content_user_info_introduction_hint">20자 이내로 입력해주세요</string>
    <string name="content_user_info_profile_photo">content_user_info_profile_photo</string>
    <string name="content_user_info_profile_photo_black">content_user_info_profile_photo_black</string>
    <string name="title_user_info_test">취향 테스트</string>
    <string name="content_user_info_test">비슷한 취향의 여행 메이트를 추천해드려요!</string>
    <string name="content_test_disagree">비동의</string>
    <string name="content_test_agree">동의</string>
    <string name="image_test_check">image_test_check</string>
    <string name="content_certificate_phone">휴대폰 인증</string>
    <string name="content_verification_again">인증번호를 받지 못하셨나요?</string>
    <string name="content_user_info_age_hint">나이를 입력하세요</string>
    <string name="title_board_category">전체</string>
    <string name="image_select_location">image_select_location</string>
    <string name="image_post_board">image_post_board</string>
    <string name="image_search_board">image_search_board</string>
    <string name="image_ticket_dash_line">image_ticket_dash_line</string>
    <string name="content_ticket_date">DATE</string>
    <string name="content_ticket_destination">DESTINATION</string>
    <string name="image_ticket_airplane">image_ticket_airplane</string>
    <string name="content_post_comment">20자 이내로 작성해주세요!</string>
    <string name="content_comment_hint">작성자에게 전달할\n간단한 소개글을 작성해주세요</string>
    <string name="content_post_board_comment">신청하기</string>
    <string name="image_board_profile">image_board_profile</string>
    <string name="image_go_to_profile_detail">image_go_to_profile_detail</string>
    <string name="image_board_line">image_board_line</string>
    <string name="content_delete_board">게시글을 삭제하겠습니까?</string>
    <string name="content_finish_board">모집 종료</string>
    <string name="content_delete_my_board">content_delete_my_board</string>
    <string name="content_none_board">해당 글을 포함하는 게시글이 없습니다</string>
    <string name="content_search_total">전체</string>
    <string name="content_search_day">날짜별</string>
    <string name="content_none_country">\?</string>
    <string name="image_dash_line">image_dash_line</string>
    <string name="title_edit_profile">프로필 수정</string>
    <string name="title_logo_ttrip">TTr!P</string>
    <string name="title_edit_profile_nickname">닉네임</string>
    <string name="content_enable_nickname">사용할 수 있는 닉네임입니다.</string>
    <string name="title_edit_profile_age">나이</string>
    <string name="content_select_date">날짜 선택</string>
    <string name="title_edit_profile_gender">성별</string>
    <string name="content_gender_female">여자</string>
    <string name="content_gender_male">남자</string>
    <string name="title_edit_profile_introduction">소개글</string>
    <string name="title_certificate_profile">프로필 인증</string>
    <string name="content_edit_profile">회원정보 수정완료</string>
    <string name="content_confirm_test_again">취향테스트 마치기</string>
    <string name="image_recent_profile_image">image_recent_profile_image</string>
    <string name="image_input_user_img">image_input_user_img</string>
    <string name="image_certificate_profile_camera">image_certificate_profile_camera</string>
    <string name="content_confirm_certificate_profile">본인 인증</string>
    <string name="title_post_board">게시글 등록</string>
    <string name="content_board_info_title">글의 제목을\n입력해주세요</string>
    <string name="content_board_info_title_hint">다른 유저들이 한눈에 알아보기 쉽게 제목을 입력해주세요!</string>
    <string name="content_board_info_content">내용을\n입력해주세요</string>
    <string name="content_board_info_content_hint">동행을 구하는 목적이나 상세한 일정을 기입해주시면 좋아요!</string>
    <string name="content_board_info_start_day">여행 시작일을\n설정해주세요</string>
    <string name="content_board_info_end_day">여행 종료일을\n설정해주세요</string>
    <string name="content_cancel_post_dialog">게시글 등록을 취소하겠습니까?\n입력된 내용은 저장되지 않습니다.</string>
    <string name="content_board_info_distination">여행지를\n선택해주세요</string>
    <string name="image_user_background">image_user_background</string>
    <string name="image_user_profile">image_user_profile</string>
    <string name="image_close_user_profile">image_close_user_profile</string>
    <string name="image_user_check">image_user_check</string>
    <string name="content_valid_city">유효한 도시가 아닙니다. 다시 입력해주세요!</string>
    <string name="content_valid_nation">유효한 나라가 아닙니다. 다시 입력해주세요!</string>
    <string name="content_post_user_board">게시글</string>
    <string name="content_finish_user_board">생성이 완료되었습니다.</string>
    <string name="content_recommend_board">추천 게시글</string>
    <string name="content_ask_recommend_board">을 받아 보시겠어요?</string>
    <string name="content_back_to_board">돌아가기</string>
    <string name="content_go_to_recommend">추천 받기</string>
    <string name="content_none_recommend_board">유사한 게시글이 없습니다</string>
    <string name="title_declaration">신고하시는 이유를\n상세히 적어주세요!</string>
    <string name="content_declaration_hint">신고내용이 거짓임이 밝혀질 경우 계정이 정지될 수 있습니다.</string>
    <string name="title_rating_ask1">님 과의 동행은</string>
    <string name="title_rating_ask2">어떠셨나요?</string>
    <string name="image_declaration_siren">image_declaration_siren</string>
    <string name="content_declaration">신고하기</string>
    <string name="content_nation">나라</string>
    <string name="content_nation_hint">나라를 입력해주세요</string>
    <string name="content_city">도시</string>
</resources>