<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_splash">

        <ImageView
            android:id="@+id/iv_ticket_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_splash_ticket_back"
            android:src="@drawable/ic_splash_ticket_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_ticket_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/image_splash_ticket_front"
            android:src="@drawable/ic_splash_ticket_front"
            app:layout_constraintBottom_toTopOf="@id/ll_logo"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/content_logo_text1"
                android:lines="1"
                android:textColor="@color/pear"
                android:textSize="80sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/content_logo_text2"
                android:textColor="@color/neon_blue"
                android:textSize="80sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/content_logo_text3"
                android:textColor="@color/pear"
                android:textSize="80sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>